Copyright © 2009 CNRS
Copyright © 2009-2012 Inria.  All rights reserved.
Copyright © 2009-2013 Université Bordeaux 1
Copyright © 2009-2011 Cisco Systems, Inc.  All rights reserved.

$COPYRIGHT$

Additional copyrights may follow

$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9 (as initially released as "libtopology", then re-branded to "hwloc"
in v0.9.1).


Version 1.7.0
-------------
* Backends
  + Add NetBSD support, thanks to Aleksej Saushev.
  + Add three GPU detection components: opencl (for the AMD OpenCL
    implemenation), cuda and nvml (for NVIDIA GPUs).
    - They add OS devices such as opencl0d0, cuda0 and nvml0 inside the
      corresponding PCI devices with some string info attributes.
    - The nvml component also improves the discovery of NVIDIA GPU
      PCIe link speed.
    - They may be built as plugins.
    - They may be disabled with --disable-opencl/cuda/nvml.
    See the I/O Devices, Components and Plugins, and FAQ documentation
    sections for details.
* API
  + Add hwloc_topology_get_flags().
  + Add hwloc/plugins.h for building external plugins.
    See the Adding new discovery components and plugins section.
* Interoperability
  + Add hwloc/opencl.h to retrieve the locality or OS device for
    AMD GPU devices or indexes.
  + Add hwloc/nvml.h to retrieve the locality or OS device for NVML
    devices or indexes.
  + Add new helpers in hwloc/cuda.h and hwloc/cudart.h to convert
    between CUDA devices or indexes and hwloc OS devices.
  + Add hwloc_ibv_get_device_osdev() and clarify the requirements
    of the OpenFabrics Verbs helpers in hwloc/openfabrics-verbs.h.
* Documentation
  + Add a section "Existing components and plugins".
  + Add a list of common OS devices in section "Software devices".